--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Text for draggable input fix</title>
-  <script src="draggable-input-fix.min.js"></script>
+  <script src="draggable-input-fix.js"></script>
   <style>
     input, textarea {
       margin: 1em 0;
